<resources>
    <string name="app_name">Media Controller</string>
    <string name="menu_main_action_settings">Settings</string>
    <string name="menu_main_action_connect">Connect</string>
    <string name="menu_main_action_disconnect">Disconnect</string>
    <string name="bluetooth_handler_paired_dialog">Cancel</string>
    <string name="main_activity_connect_button">Connect to Media Controller</string>
    <string name="main_button_vol_dow">Volume Down</string>
    <string name="main_button_vol_down">Volume Up</string>
    <string name="main_button_next_track">Next Track</string>
    <string name="main_button_play">Play / Pause</string>
    <string name="main_button_prev_track">Previous Track</string>
</resources>